filter_cols bug workaround in getting-started nb

--- a/notebooks/getting-started-2017.ipynb
+++ b/notebooks/getting-started-2017.ipynb
@@ -112,8 +112,8 @@
    "source": [
     "raw_2017.plot_timeseries(frequency='1M', \n",
     "                         agency='Illinois State Police', \n",
-    "                         filter_cols='ResultOfStop', \n",
-    "                         filter_values='Citation', \n",
+    "                         filter_cols=['ResultOfStop'], \n",
+    "                         filter_values=['Citation'], \n",
     "                         group='DriverSex')"
    ]
   },
